# projects

./: .gitignore  README.md
rag_projects/: pyproject.toml
rag_projects/stock-rag/: notes.md  rag_runner.ipynb  stock-rag.ipynb  stock-rag.py  stock_suggester.py  test.ipynb
rag_projects/stock-rag/src/: __init__.py
rag_projects/stock-rag/src/base/: __init__.py  base.py
rag_projects/stock-rag/src/scrapper/: __init__.py  entity_extractor.py  news_filter.py  plsql_uploader.py  rss_parser.py  runner.py
rag_projects/stock-rag/src/suggestor/: __init__.py  analyst_agent.py  finance_agent.py  prompts.py  suggester_agent.py
