[project]
name = "rag-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.14.3",
    "ctransformers>=0.2.27",
    "datasets>=5.0.0",
    "faker>=40.19.1",
    "jinja2>=3.1.6",
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "logging>=0.4.9.6",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "psycopg>=3.3.4",
    "pypdf>=6.12.2",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.29",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]
